# snaplet-customauth

./: LICENSE  README.md  account.sql  bookmark.sql  piperka-snap.cabal  snaplet-customauth.cabal
Snap/Snaplet/: CustomAuth.hs  Session2.hs
Snap/Snaplet/CustomAuth/: AuthManager.hs  Challenge.hs  Handlers.hs  Heist.hs  Types.hs  User.hs  Util.hs
Snap/Snaplet/CustomAuth/OAuth2/: Internal.hs  Splices.hs
Snap/Snaplet/CustomAuth/OAuth2/Internal/: DPoP.hs  PAR.hs  UserInfo.hs
Snap/Snaplet/Session2/: SessionManager.hs
snaplets/heist/templates/: 404_.tpl  _accountAttach.tpl  _accountError.tpl  _alphabetIndex.tpl  _authFailure.tpl  _authenticateWith.tpl  _base.tpl  _cidMissing.tpl  _column.tpl  _configurationError.tpl  _csrfForm.tpl  _hilightButton.tpl  _listing.tpl  _listingForm.tpl  _listingStdItem.tpl  _loginFailed.tpl  _navigate.tpl  _profileMissing.tpl  _projectWonderful.tpl  _qSearch.tpl  _sortOptions.tpl  _sqlErr.tpl  _submit.tpl  _subscribe.tpl  _updateMissing.tpl  about.html.tpl  account.html.tpl  browse.html.tpl  cinfo.tpl  deadinfo.html.tpl  edit_info.html.tpl  fortune.html.tpl  genentry.html.tpl  graveyard.html.tpl  help.html.tpl  index.tpl  info.html.tpl  loginFailed_.tpl  loginwith.html.tpl  lost.html.tpl  (+19 more)
snaplets/heist/templates/include/: cinfo.tpl
src/: Application.hs  Backend.hs  MyData.hs  Site.hs
src/Heist/Compiled/: Extra.hs
src/Piperka/: API.hs  Account.hs  Action.hs  Auth.hs  HTTPS.hs  Listing.hs  Messages.hs  OAuth2.hs  Readers.hs  Recover.hs  Splices.hs  Submission.hs  Util.hs
src/Piperka/API/: Archive.hs  ComicInfo.hs  Common.hs  Genentry.hs  Login.hs  Profile.hs  Provider.hs  QuickSearch.hs  Submit.hs  SubmitInfo.hs  TagList.hs  UserPrefs.hs
src/Piperka/API/OAuth2/: Types.hs
src/Piperka/API/Submit/: Banner.hs  Splices.hs  Types.hs
src/Piperka/Account/: Action.hs  Query.hs  Splices.hs  Types.hs
src/Piperka/Action/: Query.hs  Splices.hs  Statements.hs  Types.hs
src/Piperka/Auth/: Splices.hs
src/Piperka/ComicInfo/: Epedia.hs  External.hs  Query.hs  Splices.hs  Statements.hs  Tag.hs  Types.hs
src/Piperka/Error/: Splices.hs
src/Piperka/Keys/: Dummy.hs
src/Piperka/Listing/: Query.hs  Render.hs  Splices.hs  Statements.hs  Types.hs
src/Piperka/Listing/Column/: Splices.hs
src/Piperka/Listing/Header/: Query.hs  Splices.hs
src/Piperka/Listing/Navigate/: Splices.hs
src/Piperka/Listing/Types/: Ordering.hs
src/Piperka/Maint/: Query.hs  Splices.hs  Types.hs
src/Piperka/OAuth2/: Query.hs  Splices.hs  Types.hs
src/Piperka/Profile/: Statements.hs  Types.hs
src/Piperka/Splices/: Account.hs  Flavor.hs  Providers.hs  Revert.hs
src/Piperka/Submit/: Splices.hs
src/Piperka/Update/: Handlers.hs  Statements.hs  Types.hs
src/Snap/: CustomAuth.hs
src/Snap/CustomAuth/: Handlers.hs
src/Snap/Snaplet/: Auth.hs  CustomAuth.hs  Hasql.hs
src/Snap/Snaplet/CustomAuth/: AuthManager.hs  Handlers.hs  Heist.hs  OAuth2.hs  Types.hs  User.hs  Util.hs
src/Snap/Snaplet/CustomAuth/Handlers/: OAuth2.hs
src/Snap/Snaplet/CustomAuth/Handlers/OAuth2/: Splices.hs
src/Snap/Snaplet/CustomAuth/OAuth2/: Internal.hs  Splices.hs
static/: moderate.js  piperka.css  piperka.js  qsearch.css  qsearch.js  reader.css  reader.js  viewarchive.js
static/map/: index.html  map.css  map.js
static/reader/: index.html
x/: epedias.json.xslt  epedias.xml  epedias.xslt  recovery_template  submit_template  tags.json.xslt  tags.xml  tags.xslt
