Name:                piperka-snap
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             BSD3
Author:              Kari Pahula
Maintainer:          kaol@iki.fi
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable piperka-snap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4     && < 5,
    lens                      >= 3.7.6   && < 4.16,
    smtp-mail                 >= 0.1.4.6 && < 0.1.5,
    bytestring                >= 0.9.1   && < 0.11,
    base64-bytestring         >= 1.0.0.1 && < 1.1,
    utf8-string               >= 1.0     && < 1.1,
    process                   >= 1.4.3,
    process-extras            >= 0.4.1.4,
    parallel-io               >= 0.3.3   && < 0.4,
    heist                     >= 1.0.1   && < 1.1,
    mtl                       >= 2       && < 3,
    transformers              >= 0.4     && < 0.6,
    transformers-compat       >= 0.5     && < 0.6,
    either                    >= 4.4.1   && < 4.5,
    errors                    >= 2.1     && < 2.2,
    uuid                      >= 1.3     && < 1.4,
    snap                      >= 1.1     && < 1.2,
    snap-core                 >= 1.0     && < 1.1,
    snap-server               >= 1.0     && < 1.1,
    snap-loader-static        >= 1.0     && < 1.1,
    configurator              >= 0.3     && < 0.4,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.6,
    xmlhtml                   >= 0.1     && < 0.3,
    dlist                     == 0.8.*,
    contravariant             >= 1.3     && < 2,
    contravariant-extras      == 0.3.*,
    hasql                     >= 0.19.18 && < 0.20,
    postgresql-error-codes    >= 1.0.1   && < 1.1,
    network-ip                >= 0.3     && < 0.4,
    data-textual              >= 0.3     && < 0.4,
    scientific                >= 0.3.4   && < 0.4,
    binary                    >= 0.8.5   && < 0.9,
    binary-orphans            >= 0.1.7   && < 0.2,
    hoauth2                   >= 1.3.0   && < 1.4.0,
    http-client               >= 0.5.7   && < 0.6,
    http-client-tls           >= 0.3.5   && < 0.4,
    containers                >= 0.5.6   && < 0.6,
    unordered-containers      >= 0.2.7.1 && < 0.3,
    aeson                     >= 1.1     && < 1.3,
    http-types                >= 0.9     && < 0.10,
    uri-bytestring            >= 0.2.3   && < 0.3,
    cryptohash-md5            >= 0.11    && < 0.12,
    base16-bytestring         >= 0.1.1   && < 0.2,
    blaze-builder             >= 0.4     && < 0.5,
    tagsoup                   >= 0.14    && < 0.15,
    map-syntax                >= 0.2     && < 0.3,
    vector                    == 0.11.*,
    unix                      >= 2.7.2   && < 2.8,
    directory                 >= 1.3     && < 1.4,
    random                    >= 1.1     && < 1.2,
    uri-encode                >= 1.5     && < 1.6,
    html-entities             >= 1.1     && < 1.2

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
