Name:                snaplet-customauth
Version:             0.3.0
Synopsis:            Alternate authentication snaplet
Description:         More customizable authentication snaplet with OAuth2 support
License:             BSD3
License-File:        LICENSE
Author:              Kari Pahula
Maintainer:          kaol@iki.fi
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/kaol/snaplet-customauth

library
  default-language:    Haskell2010
  exposed-modules:
    Snap.Snaplet.CustomAuth,
    Snap.Snaplet.CustomAuth.OAuth2

  other-modules:
    Snap.Snaplet.CustomAuth.AuthManager,
    Snap.Snaplet.CustomAuth.Challenge,
    Snap.Snaplet.CustomAuth.Handlers,
    Snap.Snaplet.CustomAuth.Heist,
    Snap.Snaplet.CustomAuth.Types,
    Snap.Snaplet.CustomAuth.User,
    Snap.Snaplet.CustomAuth.Util,
    Snap.Snaplet.CustomAuth.OAuth2.Internal,
    Snap.Snaplet.CustomAuth.OAuth2.Internal.DPoP,
    Snap.Snaplet.CustomAuth.OAuth2.Internal.PAR,
    Snap.Snaplet.CustomAuth.OAuth2.Internal.UserInfo,
    Snap.Snaplet.CustomAuth.OAuth2.Splices

  Build-depends:
    base                      >= 4.4     && < 5,
    lens                      >= 3.7.6   && < 6,
    bytestring                >= 0.9.1   && < 0.13,
    base64-bytestring         >= 1.0.0.1 && < 1.3,
    crypton                   >= 1.0     && < 2,
    memory                    >= 0.18    && < 1,
    jose                      >= 0.11    && < 0.12,
    monad-time                >= 0.4     && < 0.5,
    heist                     >= 1.0.1   && < 1.2,
    mtl                       >= 2       && < 3,
    transformers              >= 0.4     && < 0.7,
    errors                    >= 2.3     && < 2.4,
    snap                      >= 1.1     && < 1.2,
    snap-core                 >= 1.0     && < 1.1,
    configurator              >= 0.3     && < 0.4,
    text                      >= 0.11    && < 2.3,
    time                      >= 1.1     && < 1.13,
    xmlhtml                   >= 0.1     && < 0.3,
    binary                    >= 0.8.5   && < 0.9,
    binary-instances          >= 1       && < 2,
    hoauth2                   >= 2.9     && < 3,
    attoparsec                >= 0.13    && < 0.15,
    case-insensitive          >= 1       && < 2,
    http-client               >= 0.5.7   && < 0.8,
    http-client-tls           >= 0.3.5   && < 0.4,
    http-types                >= 0.12    && < 0.13,
    containers                >= 0.5.6   && < 0.7,
    unordered-containers      >= 0.2.7.1 && < 0.3,
    aeson                     >= 2.0.1.0 && < 3,
    uri-bytestring            >= 0.2.3   && < 0.4,
    network-uri               >= 2.6.1   && < 3,
    map-syntax                >= 0.2     && < 0.4
